Add group-specific interfaces.